--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -1,56 +1,24 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Landed by HTML5 UP
+	Big Picture by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Loader */
 
-	body.landing {
-		&:before, &:after {
+	body {
+		&:before,
+		&:after {
 			display: none !important;
 		}
 	}
 
-/* Icon */
+/* Poptrox */
 
-	.icon {
-		&.alt {
-			color: inherit !important;
-		}
-
-		&.major {
-			&.alt {
-				&:before {
-					color: _palette(fg-bold) !important;
-				}
-			}
-		}
-	}
-
-/* Banner */
-
-	#banner {
-		&:after {
-			background-color: _palette(bg-transparent);
-		}
-	}
-
-/* Footer */
-
-	#footer {
-		.icons {
-			.icon {
-				&.alt {
-					&:before {
-						color: _palette(fg-bold) !important;
-					}
-				}
-			}
-		}
+	.poptrox-popup .loader {
+		display: none !important;
 	}
