--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,13 +1,36 @@
 /*
-	Parallelism by HTML5 UP
+	Identity by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* List */
 
-	body {
-		background-image: url("../../images/bg.jpg");
-		background-size: cover;
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	ul.icons li a {
+		-ms-behavior: url("assets/js/PIE.htc");
 	}
+
+		ul.icons li a:before {
+			text-align: center;
+			font-size: 26px;
+		}
+
+/* Main */
+
+	#main {
+		-ms-behavior: url("assets/js/PIE.htc");
+	}
+
+		#main .avatar img {
+			-ms-behavior: url("assets/js/PIE.htc");
+		}
+
+/* Footer */
+
+	#footer {
+		color: #fff;
+	}
+
+		#footer .copyright li {
+			border-left: solid 1px #fff;
+		}
