--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -4,13 +4,22 @@
 @import 'libs/skel';
 
 /*
-	Parallelism by HTML5 UP
+	Identity by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Reel */
+/* Basic */
 
-	#reel {
-		opacity: 1;
+	body {
+		&:after {
+			display: none;
+		}
+	}
+
+/* Main */
+
+	#main {
+		@include vendor('transform', 'none !important');
+		opacity: 1 !important;
 	}
